fixed z-index

--- a/src/components/common/page-header/page-header.scss
+++ b/src/components/common/page-header/page-header.scss
@@ -4,6 +4,7 @@
   padding: $header-height;
   text-align: center;
   margin-bottom: 2rem;
+  z-index: 2;
 
   position: relative;
 
